[FIX] Fix modal dialog overflow on tiny screens

--- a/pandora-client-web/src/components/dialog/dialog.scss
+++ b/pandora-client-web/src/components/dialog/dialog.scss
@@ -13,8 +13,13 @@
 	justify-content: center;
 	flex-direction: column;
 	isolation: isolate;
+	overflow: hidden;
 
 	.dialog-content {
+		max-width: calc(100% - 1em);
+		max-height: calc(100% - 1em);
+		overflow: auto;
+
 		padding: 1em;
 		border: 1px solid $black;
 		border-radius: 1em;
